[package]
name = "variadic_arguments"
version = "0.1.1"
edition = "2024"
description = "Implements variadic arguments into Rust."
repository = "https://github.com/bloopos/variadic_args"
license = "MIT"
readme = "README.md"

[dependencies]
smartstring = { version = "1.0.1", optional = true }

[features]
default = []
no_std = []
keyword_arguments = ["dep:smartstring"]
